# Open-LLM-VTuber

./: start-jarvis.sh
characters/: jarvis.yaml
src/open_llm_vtuber/: lumina_bridge.py  server.py
tauri-shell/: index.html  package-lock.json  package.json  vite.config.ts
tauri-shell/src/: App.tsx
tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
tauri-shell/src-tauri/icons/: icon.icns
tauri-shell/src-tauri/src/: lib.rs  main.rs
tauri-shell/src/components/: Live2DCanvas.tsx  MoodIndicator.tsx  TradingOverlay.tsx
tauri-shell/src/hooks/: useTradingState.ts  useWebSocket.ts
