[package]
name = "jarvis-companion"
version = "0.1.0"
description = "JARVIS Desktop Companion — Tauri 2.x Shell"
authors = ["Cedarbrook Financial Services LLC"]
edition = "2021"

[lib]
name = "jarvis_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
